tests/paczka1/small_fuzzy/73862052.err
Error in line 5: 9Ib1jIFJfD A121 18,6
Error in line 7: gw5tK52t S62 59,3
Error in line 6: 9Ib1jIFJfD A785 10,5
Error in line 9: XU9O86e9PEq A121 93,1
Error in line 14: XU9O86e9PEq S62 87,9
